# Algorithm

./: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
common/: qlogger.cpp  qlogger.h
